@@ -19,5 +19,10 @@ ViewportId=0x51F6EF2D
 Size=680,344
 Collapsed=0
 
+[Window][UHE Settings]
+Pos=150,56
+Size=440,708
+Collapsed=0
+
 [Docking][Data]
 
